[gd_scene load_steps=2 format=3 uid="uid://cer6cdqaw15p1"]

[ext_resource type="Script" uid="uid://4n7wj5yvmv5j" path="res://Scripts/UI/dialogue_box.gd" id="1_wbuxg"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchor_left = 0.031000001
anchor_top = 0.6
anchor_right = 0.96900004
anchor_bottom = 0.9110001
offset_left = 0.19999886
offset_right = -0.2000122
offset_bottom = 0.049957275
script = ExtResource("1_wbuxg")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.171
anchor_right = 0.165
anchor_bottom = 0.82900006
offset_left = -0.25
offset_top = 0.059999466
offset_right = 0.24999237
offset_bottom = -0.060005188

[node name="Dialogue" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19100001
anchor_top = 0.136
anchor_right = 0.96700007
anchor_bottom = 0.85700005
offset_left = -0.25001526
offset_top = -0.040000916
offset_right = -0.25006104
offset_bottom = 0.019989014

[connection signal="start_dialogue" from="." to="." method="_on_start_dialogue"]
